add env var to  ci workflow

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -8,6 +8,10 @@ on:
     branches: [ develop ]
   pull_request:
     branches: [ develop ]
+    
+env:
+  ## Sets environment variables
+  CI: false   
 
 jobs:
   build:
