--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,10 +4,11 @@
 name: Node.js CI
 
 on:
-  push:
-    branches: [ develop ]
-  pull_request:
-    branches: [ develop ]
+#   push:
+#     branches: [ develop ]
+#   pull_request:
+#     branches: [ develop ]
+  workflow_dispatch:
     
 env:
   ## Sets environment variables
@@ -18,18 +19,82 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [12.x, 14.x, 16.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+#     strategy:
+#       matrix:
+#         node-version: [12.x, 14.x, 16.x]
+#         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
+#     steps:
+#     - uses: actions/checkout@v3
+#     - name: Use Node.js ${{ matrix.node-version }}
+#       uses: actions/setup-node@v3
+#       with:
+#         node-version: ${{ matrix.node-version }}
+#         cache: 'npm'
+#     - run: npm ci
+#     - run: npm run build --if-present
+# #     - run: npm test
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Checkout repository
+      uses: actions/checkout@v3
+    
+    - name: Set up Node.js 16
       uses: actions/setup-node@v3
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: '16'
         cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
+        
+    - name: Install dependencies  
+#       run: npm ci
+      run: npm install
+    
+#     - name: Run tests
 #     - run: npm test
+    
+    - name: build react app 
+      run: npm run build
+#     - run: npm run build --if-present
+
+#     - name: Deploy
+#     run: |
+#       git config --global user.name $user_name
+#       git config --global user.email $user_email
+#       git remote set-url origin https://${github_token}@github.com/${repository}
+#       npm run deploy
+#     env:
+#       user_name: 'github-actions[bot]'
+#       user_email: 'github-actions[bot]@users.noreply.github.com'
+#       github_token: ${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}
+#       repository: ${{ github.repository }}
+      
+    - name: ssh deploy
+    # You may pin to the exact commit or the version.
+    # uses: easingthemes/ssh-deploy@c711f2c3391cac2876bf4c833590077f02e4bcb8
+      uses: easingthemes/ssh-deploy@v2.2.11
+      with:
+        # Private Key
+        SSH_PRIVATE_KEY: ${{ secrets.CD_SK }}
+        # Remote host
+        REMOTE_HOST: ${{ secrets.REMOTE_HOST_ADDR }}
+        # Remote user
+        REMOTE_USER: ${{ secrets.REMOTE_HOST_USER }}
+        # Remote port
+  #       REMOTE_PORT: # optional, default is 22
+        # Source directory
+        SOURCE: "/dist/"
+        # Target directory
+        TARGET: ${{ secrets.TARGET_PATH }} # optional, default is /home/REMOTE_USER/
+        # Arguments to pass to rsync
+        ARGS: "-rltgoDzvO"
+        # An array of folder to exclude
+        EXCLUDE: "/dist/, /node_modules/"
+
+  #       SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
+  #       ARGS: "-rltgoDzvO"
+  #       SOURCE: "dist/"
+#       REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
+#       REMOTE_USER: ${{ secrets.REMOTE_USER }}
+#       TARGET: ${{ secrets.REMOTE_TARGET }}
+#       EXCLUDE: "/dist/, /node_modules/"
+
