--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -68,7 +68,7 @@ jobs:
 #       github_token: ${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}
 #       repository: ${{ github.repository }}
     - name: print remote host address
-      run: echo $REMOTE_HOST_ADDR
+      run: echo ${{ secrets.REMOTE_HOST_USER }}
       
     - name: ssh deploy
     # You may pin to the exact commit or the version.
