--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -84,7 +84,7 @@ jobs:
         # Remote port
   #       REMOTE_PORT: # optional, default is 22
         # Source directory
-        SOURCE: "/dist/"
+        SOURCE: "dist/"
         # Target directory
         TARGET: ${{ secrets.TARGET_PATH }} # optional, default is /home/REMOTE_USER/
         # Arguments to pass to rsync
