Update node.js.yml workflow. Split steps into jobs

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -70,6 +70,13 @@ jobs:
     - name: print remote host address
       run: echo ${{ secrets.REMOTE_HOST_USER }}
       
+  # job #2
+  deploy:
+  
+    runs-on: ubuntu-latest
+    
+    steps:
+    
     - name: clean target folder
       uses: appleboy/ssh-action@master
       with:
@@ -81,8 +88,7 @@ jobs:
           ls -la ${{ secrets.TARGET_PATH }}
           rm -r ${{ secrets.TARGET_PATH }}/*
           ls -al ${{ secrets.TARGET_PATH }}
-      
-      
+          
     - name: ssh deploy
     # You may pin to the exact commit or the version.
     # uses: easingthemes/ssh-deploy@c711f2c3391cac2876bf4c833590077f02e4bcb8
